--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,5 +20,6 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
+    - run: npm run lint
       env:
         CI: true
